Fix z-index of add-button

--- a/apps/travelmaker-app/src/app/destinations/destinations.component.scss
+++ b/apps/travelmaker-app/src/app/destinations/destinations.component.scss
@@ -13,6 +13,7 @@
   position: fixed;
   bottom: 68px;
   right: 16px;
+  z-index: 10;
 }
 
 .destinations__navigate-btn-wrap {
